--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
 	<body ng-controller="mainController">
 		 <!-- HEADER AND NAVBAR -->
         <header>
-            <nav class="navbar navbar-default" >
+            <nav class="navbar navbar-default nav-colors">
             <div class="container">
                 <div class="navbar-header">
-                    <a class="navbar-brand" href="/">Hello Yes it is Murph</a>
+                    <a class="navbar-brand" href="#home">Rebecca Murphy</a>
                 </div>
 
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#home"><i class="fa fa-home"></i> Home</a></li>
-                    <li><a href="#about"><i class="fa fa-shield"></i> About</a></li>
-                    <li><a href="#contact"><i class="fa fa-comment"></i> Contact</a></li>
+                    <li><a href="#home"><!--<i class="fa fa-home"></i>--> Home</a></li>
+                    <li><a href="#about"><!--<i class="fa fa-shield"></i>--> About</a></li>
+                    <li><a href="#contact"><!--<i class="fa fa-comment"></i>--> Contact</a></li>
                 </ul>
             </div>
             </nav>
