started detailing the pages.

--- a/pages/about.html
+++ b/pages/about.html
@@ -1,6 +1,20 @@
- <!-- about.html -->
-<div class="jumbotron text-center h">
+ <!-- about html -->
+<div class="jumbotron text-center _title">
     <h1>About Page</h1>
-
-    <p>{{ message }}</p>
+</div>
+<div>
+    <div class="container-fluid">
+    <div class="row">
+    	<div class=" col-lg-3  col-md-3  col-sm-3  col-xs-3">
+    		<img src={{path}} class="img-responsive" alt="Responsive image">
+    	</div>
+  		<div class=" col-lg-9  col-md-9  col-sm-9  col-xs-9">
+  			<div data-ng-repeat="paragraph in bio" class="paragraph-bio">
+  				{{paragraph}}
+  			</div>
+  		</div>
+    </div>
+    </div>
+    
+</div>
 </div>
