--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,5 +1,5 @@
 <!-- contact.html -->
-<div class="jumbotron text-center">
+<div class="jumbotron text-center _title">
     <h1>Contact Page</h1>
 
     <p>{{ message }}</p>
