--- a/pages/home.html
+++ b/pages/home.html
@@ -1,6 +1,4 @@
  <!-- home.html -->
-<div class="jumbotron text-center">
+<div class="jumbotron text-center _title">
     <h1>Home Page</h1>
-
-    <p>{{ message }}</p>
 </div>
