--- a/index.html
+++ b/index.html
@@ -12,17 +12,28 @@
 	<body ng-controller="mainController">
 		 <!-- HEADER AND NAVBAR -->
         <header>
-            <nav class="navbar navbar-default nav-colors">
+            <nav class="navbar navbar-default _nav-colors navbar-inverse navbar-static-top" role="navigation">
             <div class="container">
                 <div class="navbar-header">
-                    <a class="navbar-brand" href="#home">Rebecca Murphy</a>
-                </div>
 
+					<a class="navbar-brand" href="#home">Rebecca Murphy</a>
+	                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+		                <span class="sr-only">Toggle navigation</span>
+		                <span class="icon-bar"></span>
+		                <span class="icon-bar"></span>
+		                <span class="icon-bar"></span>
+		         	</button>
+                    
+                </div>
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="#home"><!--<i class="fa fa-home"></i>--> Home</a></li>
                     <li><a href="#about"><!--<i class="fa fa-shield"></i>--> About</a></li>
+                    <li><a href="#projects"><!--<i class="fa fa-shield"></i>--> Projects</a></li>
+                    <li><a href="#resume"><!--<i class="fa fa-shield"></i>--> Resume</a></li>
                     <li><a href="#contact"><!--<i class="fa fa-comment"></i>--> Contact</a></li>
                 </ul>
+                </div>
             </div>
             </nav>
         </header>
@@ -40,6 +51,7 @@
 		<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-route.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-resource.min.js"></script>
 		<script type="text/javascript" src="js/script.js"></script>		
+		<script type="text/javascript" src="js/resume.js"></script>		
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 		
 	</body>
