started working on projects page

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -1,6 +1,29 @@
  <!-- about.html -->
 <div class="jumbotron text-center _title">
     <h1>Projects</h1>
-
-    <p>{{ message }}</p>
+    <div class="container">
+    <div class="row">
+        <div class="col-md-3 portfolio-item">
+            <a href="#">
+                <img class="img-responsive" src="http://placehold.it/750x450" alt="">
+            </a>
+        </div>
+        <div class="col-md-3 portfolio-item">
+            <a href="#">
+                <img class="img-responsive" src="http://placehold.it/750x450" alt="">
+            </a>
+        </div>
+        <div class="col-md-3 portfolio-item">
+            <a href="#">
+                <img class="img-responsive" src="http://placehold.it/750x450" alt="">
+            </a>
+        </div>
+        <div class="col-md-3 portfolio-item">
+            <a href="#">
+                <img class="img-responsive" src="http://placehold.it/750x450" alt="">
+            </a>
+        </div>
+    </div>
+    </div>
+    
 </div>
