--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-resource.min.js"></script>
 		<script type="text/javascript" src="js/script.js"></script>		
 		<script type="text/javascript" src="js/resume.js"></script>		
+		<script type="text/javascript" src="js/projects.js"></script>		
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 		
 	</body>
