--- a/pages/projects.html
+++ b/pages/projects.html
@@ -1,6 +1,6 @@
  <!-- about.html -->
 <div class="jumbotron text-center _title">
-    <h1>Projects</h1>
+    <h1 class="project-title">Projects</h1>
     <div class="container">
     <div class="row" ng-repeat="row in projects">
         <div class="col-md-3 portfolio-item" ng-repeat="project in row" >
